--- a/app/view/layout/header.html
+++ b/app/view/layout/header.html
@@ -24,6 +24,20 @@
           </a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link d-flex align-items-center" aria-current="page" href="index.php?pg=login" id="shop">
+            <span class="p-2"><i class="fa fa-user-circle fa-2x" aria-hidden="true"></i></span>
+            Cadastro Login
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link d-flex align-items-center" aria-current="page" href="index.php?pg=usuario" id="shop">
+            <span class="p-2"><i class="fa fa-user-circle fa-2x" aria-hidden="true"></i></span>
+            Usuário
+          </a>
+        </li>
+
       </ul>
     </div>
   </div>
