--- a/app/view/layout/login.html
+++ b/app/view/layout/login.html
@@ -1,6 +1,6 @@
 <div class="container mt-5 mb-5">
     <div class="row row-cols-auto justify-content-center g-5">
-        {{homeContent}}
-        {{cardHome}}
+        {{loginContent}}
+        {{tabelaLogin}}
     </div>
 </div>
