--- a/app/view/layout/header.html
+++ b/app/view/layout/header.html
@@ -1,9 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <div class="navbar-brand">
-      <img loading="lazy" src="https://www.ipm.com.br/wp-content/uploads/2021/01/ipmHeaderMainLogo.svg"
-        alt="Higex Logo">
-    </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -11,33 +7,12 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-center" aria-current="page" href="index.php?pg=home" id="shop">
-            <span class="p-2"><i class="fa-solid fa-house fa-2x"></i></span>
-            Home
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link d-flex align-items-center" aria-current="page" href="index.php?pg=produtos" id="shop">
+          <a class="nav-link d-flex align-items-center" aria-current="page" href="index.php?pg=listaDeCompras"
+            id="shop">
             <span class="p-2"><i class="fa fa-cart-plus fa-2x" aria-hidden="true"></i></span>
-            Produtos
+            Lista de Compras
           </a>
         </li>
-
-        <li class="nav-item">
-          <a class="nav-link d-flex align-items-center" aria-current="page" href="index.php?pg=login" id="shop">
-            <span class="p-2"><i class="fa fa-user-circle fa-2x" aria-hidden="true"></i></span>
-            Cadastro Login
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link d-flex align-items-center" aria-current="page" href="index.php?pg=usuario" id="shop">
-            <span class="p-2"><i class="fa fa-user-circle fa-2x" aria-hidden="true"></i></span>
-            Usuário
-          </a>
-        </li>
-
       </ul>
     </div>
   </div>
